--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Curiosidades</title>
-    <!-- Adicione o Bootstrap para o design -->
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- CSS personalizado -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -16,7 +15,7 @@
             <p>Explore informações sobre países e acesse dados úteis com nossa interface interativa.</p>
         </header>
 
-        <!-- Seção de seleção de países -->
+
         <section class="mb-5">
             <h2>Informações sobre Países</h2>
             <div class="mb-3">
@@ -26,33 +25,33 @@
                 </select>
             </div>
             <div id="country-details" class="mt-3">
-                <!-- Detalhes do país aparecerão aqui -->
+                <!-- Detalhes do país aqui -->
             </div>
         </section>
 
-        <!-- Seção de interação com API -->
         <section>
             <h2>Consulta de Dados</h2>
-            <form id="api-form" class="mb-4">
-                <div class="mb-3">
-                    <label for="query-type" class="form-label">Tipo de consulta:</label>
-                    <select id="query-type" class="form-select">
-                        <option value="cambio">Cotação de Moedas</option>
-                        <option value="feriados">Feriados Nacionais</option>
-                        <!-- Adicione mais opções aqui -->
+            <form id="api-form">
+                <div class="form-group">
+                    <label for="query-type">Tipo de Consulta</label>
+                    <select id="query-type" class="form-control">
+                        <option value="feriados">Feriados</option>
+                        <option value="cnpj">CNPJ</option>
                     </select>
                 </div>
-                <button type="submit" class="btn btn-primary">Consultar</button>
+                <div class="form-group" id="cnpj-field">
+                    <input type="text" id="query-value" class="form-control" placeholder="Digite o valor da consulta (CNPJ sem pontuação)">
+                </div>
+                <button type="submit" class="btn btn-primary btn-sm">Consultar</button>
             </form>
-            <div id="api-results">
-                <!-- Resultados da consulta aparecerão aqui -->
-            </div>
+            <div id="api-results"></div>
         </section>
     </div>
 
-    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Script principal -->
-    <script type="module" src="./js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script type="module" src="./scripts/main.js"></script>
 </body>
 </html>
